--- a/src/app/components/pages/admin/events/events.component.scss
+++ b/src/app/components/pages/admin/events/events.component.scss
@@ -7,6 +7,139 @@
     padding: 40px 30px;
 }
 
+.overlay-wrapper {
+    position: fixed;
+    top: 0;
+    left: 250px;
+
+    height: 100vh;
+    width: calc(100% - 250px);
+
+    background-color: rgba(black, .3);
+
+    z-index: 994;
+
+    touch-action: none;
+    
+    & > .confirm-box {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+
+        height: fit-content;
+        width: fit-content;
+        
+        padding: 15px 30px;
+
+        background-color: white;
+
+        & > .label {
+            position: relative;
+
+            height: fit-content;
+            width: 100%;
+
+            padding: 10px 0;
+
+            text-align: center;
+
+            font-size: 20px;
+        }
+
+        & > .choices {
+            position: relative;
+
+            height: fit-content;
+            width: fit-content;
+
+            margin: 0 auto;
+            padding: 10px 0;
+
+            display: flex;
+
+            & > div {
+                position: relative;
+
+                height: fit-content;
+                width: fit-content;
+
+                padding: 5px 15px;
+                margin-right: 30px;
+
+                color: white;
+
+                cursor: pointer;
+
+                &:last-child {
+                    margin-right: 0;
+                }
+
+                &.yes {
+                    background-color: red;
+                }
+                &.no {
+                    background-color: gray;
+                }
+            }
+        }
+    }
+}
+
+.btn-search {
+    position: relative;
+
+    float: right;
+
+    padding: 5px 30px;
+
+    background-color: orange;
+    color: white;
+
+    font-weight: bold;
+    font-size: 14px;
+
+    border-radius: 5px;
+
+    box-shadow: 1px 1px 3px 0 rgba(black, .1);
+
+    cursor: pointer;
+
+    & > i {
+        padding-left: 10px;
+    }
+}
+
+.filters {
+    position: relative;
+
+    height: fit-content;
+    width: 100%;
+
+    padding: 15px 30px;
+    margin-bottom: 30px;
+
+    background-color: white;
+    box-shadow: 1px 1px 5px 0 rgba(black, .2);
+
+    display: flex;
+
+    & > .item {
+        position: relative;
+
+        height: fit-content;
+        width: fit-content;
+
+        &.input {
+            margin-right: 30px;
+        }
+        &.search {
+            margin-left: auto;
+            align-self: center;
+        }
+    }
+}
+
 .events {
     position: relative;
 
@@ -36,37 +169,12 @@
             color: orange;
             padding: 0 30px;
         }
-
-        & > .btn-add {
-            position: relative;
-
-            float: right;
-
-            padding: 5px 10px;
-            margin-right: 30px;
-
-            background-color: orange;
-            color: white;
-
-            font-weight: bold;
-            font-size: 14px;
-
-            border-radius: 5px;
-
-            box-shadow: 1px 1px 3px 0 rgba(black, .1);
-
-            cursor: pointer;
-
-            & > i {
-                padding-right: 10px;
-            }
-        }
     }
 
     & > .events-body {
         position: relative;
         
-        height: 70vh;
+        height: 50vh;
         width: 100%;
 
         min-height: 400px;
@@ -120,9 +228,27 @@
 
                 & > .cluster {
                     width: 15%;
+
+                    text-transform: capitalize;
                 }
                 & > .tags {
                     width: 15%;
+
+                    display: flex;
+                    flex-wrap: wrap;
+
+                    & > span {
+                        display: block;
+
+                        position: relative;
+
+                        height: fit-content;
+                        width: fit-content;
+
+                        text-transform: uppercase;
+
+                        margin: 2px;
+                    }
                 }
                 & > .date {
                     width: calc(25% - 40px);
@@ -182,6 +308,13 @@
                     font-weight: bold;
 
                     border-radius: 5px;
+               }
+
+               & > .tags {
+                   font-size: 12px;
+                    /* max-height: 100px;
+                    overflow-y: scroll;
+                    overflow-x: hidden; */
                }
 
                &:hover {
